--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "solitaire",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "author": "",
   "license": "ISC",
@@ -14,5 +13,14 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app.js"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chalnicol/solitaire2020.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chalnicol/solitaire2020/issues"
+  },
+  "homepage": "https://github.com/chalnicol/solitaire2020#readme",
+  "description": ""
 }
